Revise M1 plan (rev 2): address Fable code review
Blockers:
- B1: ConnectorPageSource uses getNextSourcePage()/SourcePage.create
  (getNextPage() removed ~Trino 468) (T8).
- B2: FixedSplitSource(List.of(...)) + ArangoSplit.getRetainedSizeInBytes (T7).
- B3: JDK 23-vs-24 hard gate in Global Constraints (T2/T4/T9 depend on it).

Should-fix:
- S5 (semantic): UNKNOWN bottom sentinel so null-then-typed fields
  resolve to the concrete type instead of degrading to VARCHAR, with a
  null-then-numeric regression test (T3/T4).
- S3 LifeCycleManager.shutdown + @PreDestroy (driver thread leak);
  S9 memoized resolve(); S4 HostAndPort parsing; S6 edge-collection test;
  S8 versioned-table NOT_SUPPORTED; S1 trino-maven-plugin 15;
  S2 drop unused io.airlift:json; S7 surefire argLine.

Minor: deterministic system-attr order, empty-collection behavior,
schema-not-found handling, HTTP/2+JSON serde prose, comment fix.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>